# LimauBali

./: .gitignore  Cargo.toml  Dockerfile  README.md
deploy/: config.yml  start.sh
src/: bench.rs  book_tal.rs  eval.rs  main.rs  personality.rs  san.rs  search.rs  tables.rs  time_model.rs  tt.rs  tuner.rs  uci.rs  winboard.rs
tools/: aggression.py  build_book.py  download_book_pgns.py  tournament.py
tools/eas/: EAS_Tool_V6.0.bat  EAS_Tool_V6.0_Gauntlet_version.bat  ReadMe.txt  WhatsNew.txt  statistics_EAS_ratinglist.txt
